# Face_recognization

./: .gitignore  CMakeLists.txt  README.md  config.json  launch_backend.sh
data/: face_database.json
docs/: final_report.md
docs/design/: design_patterns.md  software_architecture.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: ui.js  webrtc-client.js
signaling/: requirements.txt  server.py
src/: CMakeLists.txt  main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  CudaResourceManager.cpp  CudaResourceManager.h  Logger.cpp  Logger.h  Types.h
src/network/: PipeProcessor.cpp  PipeProcessor.h  SignalingHandler.cpp  SignalingHandler.h  TrackFactory.cpp  TrackFactory.h  WebRTCEndpoint.cpp  WebRTCEndpoint.h
src/observer/: AttendanceObserver.cpp  AttendanceObserver.h  IObserver.h  ISubject.h  NotificationObserver.cpp  NotificationObserver.h  RecognitionEventSubject.cpp  RecognitionEventSubject.h
src/pipeline/: FilterFactory.cpp  FilterFactory.h  IFilter.h  Pipeline.cpp  Pipeline.h
src/pipeline/filters/: DecodeFilter.cpp  DecodeFilter.h  DrawingFilter.cpp  DrawingFilter.h  EncodeFilter.cpp  EncodeFilter.h  FaceDetectionFilter.cpp  FaceDetectionFilter.h  FaceRecognitionFilter.cpp  FaceRecognitionFilter.h  PreprocessFilter.cpp  PreprocessFilter.h
src/vision/: DetectorFactory.cpp  DetectorFactory.h  FaceDatabase.cpp  FaceDatabase.h  FaceTracker.cpp  FaceTracker.h  IFaceDetector.h  IFaceRecognizer.h  RecognizerFactory.cpp  RecognizerFactory.h
src/vision/detectors/: DlibCnnDetector.cpp  DlibCnnDetector.h  DlibHogDetector.cpp  DlibHogDetector.h  OpenCvDnnDetector.cpp  OpenCvDnnDetector.h
src/vision/recognizers/: DlibFaceRecognizer.cpp  DlibFaceRecognizer.h  OpenCvLbphRecognizer.cpp  OpenCvLbphRecognizer.h
tests/: CMakeLists.txt  test_observer.cpp  test_pipeline.cpp  test_strategy.cpp
